@@ -209,3 +209,5 @@
 	the 'Stats' dialog'.
 2016-02-16 Fred Gleason <fredg@paravelsystems.com>
 	* Tuned the layout of the 'Statistics' dialog.
+2016-02-16 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'gui' subpackage in 'glassplayer.spec.in'.
